tests/valid/bug100_2.m
:- module bug100_2.
:- interface.

:- import_module unit.
:- import_module bug100_3.

:- instance tc2(unit).

:- implementation.

:- instance tc2(unit) where [].
